reservation_service/service-reservation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8000
  type: ClusterIP
